--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-requirejs": "~0.4.1",
-    "grunt": "~0.4.2"
+    "grunt": "~0.4.2",
+    "grunt-text-replace": "~0.3.10"
   }
 }
