--- a/package.json
+++ b/package.json
@@ -11,5 +11,6 @@
     "grunt-contrib-requirejs": "~0.4.1",
     "grunt": "~0.4.2",
     "grunt-text-replace": "~0.3.10"
-  }
+  },
+  "license": "MIT"
 }
