--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-requirejs": "~0.4.1",
     "grunt": "~0.4.2",
-    "grunt-text-replace": "~0.3.10"
+    "grunt-text-replace": "~0.3.10",
+    "grunt-contrib-copy": "~0.4.1"
   },
   "license": "MIT"
 }
