Add i18n example. Resolves #12

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "deps/domReady"]
 	path = deps/domReady
 	url = git@github.com:requirejs/domReady.git
+[submodule "deps/i18n"]
+	path = deps/i18n
+	url = https://github.com/requirejs/i18n.git
